Added design patterns presentation and book recommendations

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>course-1</module>
         <module>course-2</module>
         <module>course-3</module>
+        <module>course-4</module>
     </modules>
 
     <build>
