--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>course-3</module>
         <module>course-4</module>
         <module>course-5s</module>
+        <module>course-6</module>
     </modules>
 
     <build>
