Add exercises for course 8

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>course-4</module>
         <module>course-5s</module>
         <module>course-6</module>
+        <module>course-8</module>
     </modules>
 
     <build>
